feat(project): initial setup and scaffolding
- Initializes the core project structure for the NexusBridge application, including Go services for the API and relayer.
- Sets up the Hardhat development environment for Ethereum and Polygon smart contracts.
- Adds Docker and Docker Compose configurations for a containerized development and testing environment (PostgreSQL, Redis, Hardhat node).
- Creates a comprehensive README.md with setup instructions, architecture overview, and development commands.
- Configures .gitignore to exclude build artifacts, dependencies, and local environment files.
- Adds a Makefile for convenient development tasks.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,37 @@ go.work.sum
 
 # env file
 .env
+
+# Build artifacts
+bin/
+dist/
+
+# Contract artifacts
+contracts/artifacts/
+contracts/cache/
+contracts/node_modules/
+contracts/typechain-types/
+
+# Database
+*.db
+*.sqlite
+
+# Logs
+*.log
+logs/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker volumes
+postgres_data/
+redis_data/
+prometheus_data/
+grafana_data/
+
+.kiro/
