--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 go.work
 go.work.sum
 
+.kiro
+
 # env file
 .env
 
@@ -55,5 +57,3 @@ postgres_data/
 redis_data/
 prometheus_data/
 grafana_data/
-
-.kiro/
